--- a/Employees/webapp/manifest.json
+++ b/Employees/webapp/manifest.json
@@ -25,12 +25,16 @@
                 }
             },
             "YSAPUI5_SRV_01": {
-                "uri": "/sap/opu/odata/sap/YSAPUI5_SRV_01/",
+                "uri": "sap/opu/odata/sap/YSAPUI5_SRV_01",
                 "type": "OData",
                 "settings": {
                     "odataVersion": "2.0",
                     "localUri": "localService/YSAPUI5_SRV_01/metadata.xml"
                 }
+            },
+            "jsonLayout": {
+                "uri": "model/json/Layout.json",
+                "type": "JSON"
             }
         }
     },
@@ -100,6 +104,10 @@
                     "useBatch": false,
                     "defaultUpdateMethod": "Put"
                 }
+            },
+            "layoutModel" : {
+                "type": "sap.ui.model.json.JSONModel",
+                "dataSource": "jsonLayout"
             }
         },
         "resources": {
